--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ img {border:2px solid rgb(71, 88, 114); border-radius:10px;
 
 h1{
   text-shadow: 7px 6px 5px #999;
+  text-align: center;
 }
 
 .hero-image {
@@ -140,6 +141,8 @@ h1{
   line-height: 48px;
 }
 
+.html-imposer { text-align: center;}
+
 .intro {
   margin: 0 0 120px;
 }
@@ -155,7 +158,7 @@ h1{
 
 .audio {text-align: center;}
   
-
+/* Временно заблокированный переход главной картинки
 .user-image {
   margin: 0 0 24px;
   margin-top: 24px;
@@ -168,7 +171,7 @@ h1{
   width: 1008px;
   height: 730px;
 }
-
+*/
 
 .intro h3,
 .portfolio h3 {
