--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2103,6 +2103,7 @@ input, select, textarea {
 	#top {
 		padding: 10em 0 10em 0;
 		text-align: left;
+		background-image: url("images/hero-bg.jpg");
 	}
 
 		#top .image {
